<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    tools:context=".activities.MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical_end"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="32dp" />

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_end"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical"
        app:layout_constraintTop_toTopOf="@+id/guideline_horizontal" />


    <androidx.cardview.widget.CardView
        android:id="@+id/imageViewCard"
        android:layout_width="350dp"
        android:layout_height="250dp"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="15dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_end"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical"
        app:layout_constraintTop_toBottomOf="@+id/app_name">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/gif_image_description"
            android:scaleType="fitXY"
            tools:srcCompat="@tools:sample/avatars" />


    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/descriptionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/custom_image_view"
        android:gravity="center"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/loading_text_view"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_end"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical"
        app:layout_constraintTop_toBottomOf="@+id/imageViewCard" />

    <ImageButton
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="64dp"
        android:background="@drawable/custom_button"
        android:contentDescription="@string/forward_button_description"
        android:src="@drawable/ic_forward"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_end"
        app:layout_constraintStart_toEndOf="@+id/button3"
        app:layout_constraintTop_toBottomOf="@+id/descriptionTextView" />

    <ImageButton
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/custom_button"
        android:contentDescription="@string/back_button_description"
        android:rotation="180"
        android:src="@drawable/ic_forward"
        app:layout_constraintEnd_toStartOf="@+id/button"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical"
        app:layout_constraintTop_toBottomOf="@+id/descriptionTextView" />

    <Button
        android:id="@+id/reboot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:background="@android:color/transparent"
        android:text="@string/reboot_button_text"
        android:textColor="@color/main_color"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewCard"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_end"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:itemBackground="@color/white"
        app:itemIconTint="@drawable/menu_selector"
        app:itemTextColor="@color/main_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/menu_bottom" />


</androidx.constraintlayout.widget.ConstraintLayout>